Label: fix color contrast ratio (#1056)

--- a/src/less/label/ds6/label.less
+++ b/src/less/label/ds6/label.less
@@ -2,7 +2,7 @@
 @import "../../variables/ds6/icon-variables.less";
 @import "../../variables/ds6/typography-variables.less";
 
-@label-floating-label-color: @color-grey4;
+@label-floating-label-color: @color-grey5;
 @label-floating-label-inline-font-size: @font-size-16;
 @label-floating-label-disabled-color: @color-grey2;
 @label-floating-label-disabled-left: auto;
